--- a/index.html
+++ b/index.html
@@ -394,22 +394,26 @@ section{position:relative}
 .l4{ background-image:url("img/mujer1derechacapa1.png"); animation: pan-right 22s linear infinite; opacity:.55; }
 
 
-/* Esta es la que “tiembla/salta” (además de moverse en X si quieres) */
+/* Esta es la que "tiembla/salta" (además de moverse en X si quieres) */
 .l6{ background-image:url("img/gentecapa3izquierda.png"); animation: pan-left 28s linear infinite, bob-jitter 1.6s ease-in-out infinite; opacity:.85; }
 
 
 /* Animaciones de paneo horizontal */
-
+@keyframes pan-left {
+  0%   { transform: translateX(8%); }
   50%  { transform: translateX(-8%); }
   100% { transform: translateX(8%); }
 }
 
+@keyframes pan-right {
+  0%   { transform: translateX(-10%); }
   50%  { transform: translateX(10%); }
   100% { transform: translateX(-10%); }
 }
 
-/* “Bob + jitter”: saltito vertical con un pelín de vibración */
-
+/* "Bob + jitter": saltito vertical con un pelín de vibración */
+@keyframes bob-jitter {
+  0%   { transform: translateY(0)    rotate(0);    }
   20%  { transform: translateY(-2px) rotate(0.2deg);  }
   40%  { transform: translateY(1px)  rotate(-0.2deg); }
   60%  { transform: translateY(-3px) rotate(0.1deg);  }
@@ -447,15 +451,19 @@ section{position:relative}
 .l7{ background-image:url("img/gentecapa3derecha.png"); animation: pan-left 28s linear infinite, bob-jitter 1.6s ease-in-out infinite;  }
 
 /* ==== Animaciones ==== */
-
+@keyframes pan-left {
+  0%   { transform: translateX(8%); }
   50%  { transform: translateX(-8%); }
   100% { transform: translateX(8%); }
 }
 
+@keyframes pan-right {
+  0%   { transform: translateX(-10%); }
   50%  { transform: translateX(10%); }
   100% { transform: translateX(-10%); }
 }
 
+@keyframes bob-jitter {
   20%  { transform: translateY(-2px) rotate(0.2deg); }
   40%  { transform: translateY(1px)  rotate(-0.2deg); }
   60%  { transform: translateY(-3px) rotate(0.1deg); }
@@ -474,7 +482,7 @@ section{position:relative}
   isolation:isolate;     /* aísla mezclas internas */
 }
 
-/* Anula los efectos “dorados” que traía .layer del header */
+/* Anula los efectos "dorados" que traía .layer del header */
 .hero-banner .layer{
   mix-blend-mode: normal !important;
   opacity: 1 !important;
@@ -497,7 +505,7 @@ section{position:relative}
 /* (opcional) más legibilidad sobre la imagen */
 .header .menu a{ text-shadow: 0 1px 10px rgba(0,0,0,.35); }
 
-/* Oculta el “humo” cuando está transparente (si no lo quieres arriba) */
+/* Oculta el "humo" cuando está transparente (si no lo quieres arriba) */
 .header::before,
 .header::after{ opacity:.0; transition: opacity .25s ease; }
 
@@ -669,7 +677,7 @@ body.scrolled .header::after{opacity:.45}
 .l5{ background-image:url("img/hombre1derechacapa2.png"); z-index:5; }
 .l6{ background-image:url("img/gentecapa3izquierda.png"); z-index:6; }
 .l7{ background-image:url("img/gentecapa3derecha.png"); z-index:7; }
-.l8{ background-image:url("img/logo.png"); z-index:7; }
+.l8{ background-image:url("img/logo.png"); z-index:8; }
 
 /* Animaciones */
 @keyframes drift-rtl { from{transform:translateX(10%)} to{transform:translateX(-10%)} }
@@ -690,8 +698,6 @@ main{padding-top:76px}
 .rule{width:min(260px,50%);height:2px;margin:14px auto 28px;background:linear-gradient(90deg,transparent,rgba(255,215,0,.95),transparent);box-shadow:0 0 18px rgba(255,215,0,.35)}
 
 /* === Logo Effects: zoom-out once, then heartbeat loop (with optional glow) === */
-
-
 @keyframes logoZoomOut {
   0%   { transform: scale(1.8); opacity: 0; }
   40%  { opacity: 1; }
@@ -703,7 +709,6 @@ main{padding-top:76px}
   50%  { transform: scale(1.15); }
   100% { transform: scale(1); }
 }
-
 
 @keyframes heartbeat {
   0%   { transform: scale(1); }
@@ -735,12 +740,76 @@ main{padding-top:76px}
     glowPulse   3.6s ease-in-out 1.5s infinite;
 }
 
-
 /* Respeta preferencias de accesibilidad */
 @media (prefers-reduced-motion: reduce){
   .hero-banner .layer.l8{ animation: logoZoomOut 2.4s ease-out both !important; }
 }
 
+/* ===== AJUSTES ESPECÍFICOS PARA MÓVIL ===== */
+@media (max-width: 768px) {
+  /* Ajustar el hero banner para móvil */
+  .hero-banner {
+    margin-top: 0 !important;
+    height: 60vh !important;
+  }
+  
+  /* Ajustar la posición de las capas para móvil */
+  .hero-banner .layer {
+    background-position: center 30% !important;
+  }
+  
+  /* Ajustes específicos para cada capa si es necesario */
+  .hero-banner .l2 {
+    background-position: 10% 25% !important;
+  }
+  
+  .hero-banner .l3 {
+    background-position: 25% 30% !important;
+  }
+  
+  .hero-banner .l4 {
+    background-position: 75% 25% !important;
+  }
+  
+  .hero-banner .l5 {
+    background-position: 90% 30% !important;
+  }
+  
+  .hero-banner .l6,
+  .hero-banner .l7 {
+    background-position: center 35% !important;
+  }
+  
+  .hero-banner .l8 {
+    background-position: center 40% !important;
+    background-size: clamp(120px, 40vmin, 200px) auto !important;
+  }
+  
+  /* Ajustar animaciones para mejor rendimiento en móvil */
+  .hero-banner .layer {
+    animation-duration: 40s !important;
+  }
+  
+  .hero-banner .l6,
+  .hero-banner .l7 {
+    animation-duration: 30s, 2s !important;
+  }
+}
+
+/* Ajustes adicionales para pantallas muy pequeñas */
+@media (max-width: 480px) {
+  .hero-banner {
+    height: 50vh !important;
+  }
+  
+  .hero-banner .layer {
+    background-position: center 25% !important;
+  }
+  
+  .hero-banner .l8 {
+    background-size: clamp(100px, 35vmin, 180px) auto !important;
+  }
+}
 </style>
 </head>
 <body>
@@ -843,7 +912,7 @@ main{padding-top:76px}
     </div>
   </section>
 
-  <!-- PAQUETES -->
+  <!-- Paquetes -->
   <section id="paquetes">
     <div class="wrap">
       <h3 class="section-title">Paquetes</h3>
