--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         }
         
         .l1 { 
-            background-image: url("img/fondo.png);
+            background-image: url("img/fondo.png");
             background-size: cover;
             background-position: center top;
             z-index: 1;
